Refactor3